--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,10 +8,18 @@
 
   <ion-content>
     <ion-list>
-      <button ion-item menuClose="menu1" detail-none>
-        Close Menu
-      </button>
+      <ion-item no-lines>
+        <ion-avatar item-start>
+          <img src="./assets/imgs/logo.png">
+        </ion-avatar>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>available</ion-label>
+        <ion-toggle></ion-toggle>
+      </ion-item>
     </ion-list>
+
   </ion-content>
 
 </ion-menu>
