add user info in side menu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
   <ion-header>
     <ion-toolbar color="primary">
-      <ion-title>Menu</ion-title>
+      <ion-title>Profile</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -12,11 +12,20 @@
         <ion-avatar item-start>
           <img src="./assets/imgs/logo.png">
         </ion-avatar>
+        <h2>Neil Zhu</h2>
+        <p>advanced UX designer</p>
+
       </ion-item>
-      
+
       <ion-item>
         <ion-label>available</ion-label>
         <ion-toggle></ion-toggle>
+      </ion-item>
+
+      <ion-item>
+        <ion-icon name="mail-open"></ion-icon>
+        messages
+        <ion-badge item-end color="primary">5</ion-badge>
       </ion-item>
     </ion-list>
 
