add fake event data

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -27,6 +27,11 @@
         messages
         <ion-badge item-end color="primary">5</ion-badge>
       </ion-item>
+
+      <ion-item>
+        <ion-icon name="star"></ion-icon>
+        Saved Events
+      </ion-item>
     </ion-list>
 
   </ion-content>
