add create event and view event page

--- a/src/pages/create-event/create-event.scss
+++ b/src/pages/create-event/create-event.scss
@@ -1,3 +1,116 @@
 page-create-event {
+    .multi-input
+    {
+        margin: 0px;
 
+        &.item-datetime.item-label-floating
+        {
+            ion-label {
+                margin-top: 7px;
+            }
+
+            ion-datetime {
+                padding-top: 0px;
+            }
+        }
+
+        ion-datetime {
+            padding-left: 0px;
+
+            .datetime-text
+            {
+                color: grey;
+            }
+        }
+    }
+
+    .multi-input-row
+    {
+        align-items: flex-end;
+
+        ion-col {
+            padding: 0px 7px;
+
+            &:first-child{
+                padding-left: 0px;
+            }
+
+            &:last-child{
+                padding-right: 0px;
+            }
+        }
+
+        .multi-input
+        {
+            margin: 0px;
+
+            &.item-datetime.item-label-floating
+            {
+                ion-label {
+                    margin-top: 7px;
+                }
+
+                ion-datetime {
+                    padding-top: 0px;
+                }
+            }
+
+            ion-datetime {
+                padding-left: 0px;
+
+                .datetime-text
+                {
+                    color: grey;
+                }
+            }
+        }
+    }
+
+    .form-section
+    {
+        padding: 0px 14px;
+
+        .item:first-child
+        {
+            margin-top: 20px;
+        }
+    }
+
+    .time-item
+    {
+        padding: 0px 30px;
+        margin: 0px;
+        border: none !important;
+
+        .item-inner
+        {
+            padding: 0px;
+            border: none;
+
+            ion-label {
+                margin: 15px 8px 15px 0px;
+                font-size: 1.4rem;
+                font-weight: 500;
+                letter-spacing: 0.2px;
+                color: grey;
+            }
+
+            ion-datetime {
+                padding-right: 0px;
+                .datetime-text
+                {
+                    font-size: 1.8rem;
+                    &::after
+                    {
+                        margin-left: 4px;
+                    }
+
+                    &:empty::after
+                    {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
