--- a/src/pages/my-events/my-events.scss
+++ b/src/pages/my-events/my-events.scss
@@ -2,4 +2,8 @@ page-my-events {
     .add {
         font-weight: 800;
     }
+    .addnew {
+        margin-bottom: 30px;
+        z-index: 100;
+    }
 }
