--- a/src/pages/create-event/create-event.scss
+++ b/src/pages/create-event/create-event.scss
@@ -1,116 +1,40 @@
 page-create-event {
-    .multi-input
+
+    .upload-image-button
     {
-        margin: 0px;
+        border-radius: 6px;
+        height: initial;
+        margin: 30px 0px;
+        padding-top: 16px;
+        padding-bottom: 32px;
+        contain: style layout;
 
-        &.item-datetime.item-label-floating
+        .button-inner
         {
-            ion-label {
-                margin-top: 7px;
+            flex-wrap: wrap;
+
+            ion-icon {
+                flex: 0 0 100%;
+            max-width: 100%;
+                font-size: 3.8em;
             }
 
-            ion-datetime {
-                padding-top: 0px;
-            }
-        }
-
-        ion-datetime {
-            padding-left: 0px;
-
-            .datetime-text
+            .button-title
             {
-                color: grey;
-            }
-        }
-    }
-
-    .multi-input-row
-    {
-        align-items: flex-end;
-
-        ion-col {
-            padding: 0px 7px;
-
-            &:first-child{
-                padding-left: 0px;
-            }
-
-            &:last-child{
-                padding-right: 0px;
-            }
-        }
-
-        .multi-input
-        {
-            margin: 0px;
-
-            &.item-datetime.item-label-floating
-            {
-                ion-label {
-                    margin-top: 7px;
-                }
-
-                ion-datetime {
-                    padding-top: 0px;
-                }
-            }
-
-            ion-datetime {
-                padding-left: 0px;
-
-                .datetime-text
-                {
-                    color: grey;
-                }
-            }
-        }
-    }
-
-    .form-section
-    {
-        padding: 0px 14px;
-
-        .item:first-child
-        {
-            margin-top: 20px;
-        }
-    }
-
-    .time-item
-    {
-        padding: 0px 30px;
-        margin: 0px;
-        border: none !important;
-
-        .item-inner
-        {
-            padding: 0px;
-            border: none;
-
-            ion-label {
-                margin: 15px 8px 15px 0px;
+                flex: 0 0 100%;
+                max-width: 100%;
                 font-size: 1.4rem;
-                font-weight: 500;
-                letter-spacing: 0.2px;
-                color: grey;
-            }
-
-            ion-datetime {
-                padding-right: 0px;
-                .datetime-text
-                {
-                    font-size: 1.8rem;
-                    &::after
-                    {
-                        margin-left: 4px;
-                    }
-
-                    &:empty::after
-                    {
-                        display: none;
-                    }
-                }
+                font-weight: 400;
+                margin: 0px;
             }
         }
+    }
+    .form-action-button
+    {
+        margin: 8px auto;
+        width: 95%;
+    }
+    .time-select {
+        font-size: 0.9em;
     }
 }
