--- a/src/pages/event-detail/event-detail.scss
+++ b/src/pages/event-detail/event-detail.scss
@@ -1,3 +1,10 @@
 page-event-detail {
-
+    .host img {
+        border: 3px solid red;
+    }
+    .host span {
+        font-size: 0.8em;
+        padding-left: 5px;
+        color: grey;
+    }
 }
