created users2.json example data

--- a/src/pages/user-list/user-list.scss
+++ b/src/pages/user-list/user-list.scss
@@ -1,5 +1,8 @@
 page-user-list {
-
+	.addnew {
+        margin-bottom: 30px;
+        z-index: 100;
+    }
 	.conversation-summary-avatar {
 	  position: absolute;
 	  top: 0em;
