--- a/src/pages/invitegroup/invitegroup.scss
+++ b/src/pages/invitegroup/invitegroup.scss
@@ -1,3 +1,73 @@
 page-invitegroup {
+	.addnew {
+        margin-bottom: 30px;
+        z-index: 100;
+    }
+	.conversation-summary-avatar {
+	  position: absolute;
+	  top: 0em;
+	  left: 0em;
+	  width: 2.4em;
+	  height: 2.4em;
+	}
+
+	.conversation-summary-avatar-group-member-wrapper,
+	.conversation-summary-avatar-group-member {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  height: 100%;
+	  width: 100%;
+	  overflow: hidden;
+	}
+	.conversation-summary-avatar-group-member-wrapper {
+	  overflow: hidden;
+	}
+	.conversation-summary-avatar-group {
+	  top: 0;
+	  left: 0;
+	  overflow: hidden;
+	  position: relative;
+	  z-index: 1;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="2"] .conversation-summary-avatar-group-member-wrapper:first-child {
+	  left: -25%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="2"] .conversation-summary-avatar-group-member-wrapper:nth-child(2) {
+	  left: 50%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="2"] .conversation-summary-avatar-group-member-wrapper:nth-child(2) .conversation-summary-avatar-group-member {
+	  left: -25%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="3"] .conversation-summary-avatar-group-member-wrapper:first-child {
+	  left: -25%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="3"] .conversation-summary-avatar-group-member-wrapper:nth-child(2),
+	.conversation-summary-avatar-group[data-number-of-thumbnails="3"] .conversation-summary-avatar-group-member-wrapper:nth-child(3) {
+	  left: 50%;
+	  width: 50%;
+	  height: 50%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="3"] .conversation-summary-avatar-group-member-wrapper:nth-child(3) {
+	  top: 50%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="4"] .conversation-summary-avatar-group-member-wrapper {
+	  width: 50%;
+	  height: 50%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="4"] .conversation-summary-avatar-group-member-wrapper:nth-child(2),
+	.conversation-summary-avatar-group[data-number-of-thumbnails="4"] .conversation-summary-avatar-group-member-wrapper:nth-child(4) {
+	  left: 50%;
+	}
+	.conversation-summary-avatar-group[data-number-of-thumbnails="4"] .conversation-summary-avatar-group-member-wrapper:nth-child(3),
+	.conversation-summary-avatar-group[data-number-of-thumbnails="4"] .conversation-summary-avatar-group-member-wrapper:nth-child(4) {
+	  top: 50%;
+	}
+
+	ion-item > ion-thumbnail {
+		margin: 0 !important;
+		min-width: 36px;
+		min-height: 36px !important;
+	}
 
 }
