--- a/src/pages/invitegroup/invitegroup.scss
+++ b/src/pages/invitegroup/invitegroup.scss
@@ -69,5 +69,15 @@ page-invitegroup {
 		min-width: 36px;
 		min-height: 36px !important;
 	}
-
+	
+ .unselect-card * {
+        color: rgb(150, 150, 150);
+        .next-button {
+            border: 1px solid rgb(150, 150, 150);
+        }
+        .radio-btn {
+            border: 2px solid grey;
+            background-color: #f1f1f1;
+        }
+    }
 }
