--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" id="menu1">
+<!-- <ion-menu [content]="content" id="menu1">
 
   <ion-header>
     <ion-toolbar color="primary">
@@ -36,6 +36,6 @@
 
   </ion-content>
 
-</ion-menu>
+</ion-menu> -->
 
 <ion-nav [root]="rootPage" #content swipe-back-enabled="false"></ion-nav>
