get event's relationship with me(id:1), and restyled a little on the hosted event card

--- a/src/pages/my-events/my-events.scss
+++ b/src/pages/my-events/my-events.scss
@@ -61,4 +61,12 @@ page-my-events {
         display: inline-block; 
         padding-top: 9px
     }
+
+
+    h2{
+        width: 100%;
+    }
+    ion-icon.hostIcon{
+        float: right;
+    }
 }
