can update event, can choose different restaurant category

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -53,6 +53,7 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  warning:    #ffc107,
   dark:       #222
 );
 
