--- a/src/pages/restaurant-selection/restaurant-selection.scss
+++ b/src/pages/restaurant-selection/restaurant-selection.scss
@@ -41,4 +41,19 @@ page-restaurant-selection {
         }
     }
 
+    .forecast_container{
+        overflow-x: scroll!important;
+        overflow-y: hidden;
+        word-wrap: break-word;
+        height:20vw;
+        font-size:0.8em;
+        font-weight:300;
+    }
+
+    .res-btns {
+        ion-row {
+            height: 39px!important;
+        }
+    }
+
 }
