--- a/src/pages/message/message.scss
+++ b/src/pages/message/message.scss
@@ -1,6 +1,11 @@
-page-message {	
+page-message {
+	.accept-request {
+		content: "Accepted";
+		background-color: "green";
+	}
 	.notifications-content
 	{
+
 		.notifications-divider
 		{
 			font-size: 1.2rem;
@@ -27,7 +32,7 @@ page-message {
 				margin: 0px;
 				align-self: flex-start;
 				margin: 0 16px 0 0!important;
-				
+
 				.user-image
 				{
 					border-radius: 50%;
