change key type in event model to string, check corner case when create and update event

--- a/src/pages/create-event/create-event.scss
+++ b/src/pages/create-event/create-event.scss
@@ -34,6 +34,12 @@ page-create-event {
         margin: 8px auto;
         width: 95%;
     }
+    .form-action-button-double {
+        margin: 0 auto;
+        width: 44%;
+
+    }
+
     .time-select {
         font-size: 0.9em;
     }
