add login function, change all ids in data model to string, user can choose profile image

--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -9,6 +9,13 @@ page-user-profile {
 			margin-top: 10px;
 		}
 	}
+	.change-avatar-title {
+		color: map-get($colors, "primary");
+	}
+
+	.chooseimg {
+		opacity: 0.5;
+	}
 
 
 
