add group name to 'Groups' segment; change style

--- a/src/pages/user-list/user-list.scss
+++ b/src/pages/user-list/user-list.scss
@@ -1,6 +1,8 @@
 page-user-list {
 	.userName {
 		display:inline;
+		font-family: auto;
+		color: cornflowerblue;
 	}
 	.addnew {
         margin-bottom: 30px;
