--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -10,12 +10,12 @@ page-login {
 
        .alt-options
        {
-           .button
-           {
-               margin: 0px;
-               padding: 0px;
-               font-size: 1.4rem;
-           }
+           // .button
+           // {
+           //     margin: 0px;
+           //     padding: 0px;
+           //     font-size: 1.4rem;
+           // }
 
            .signup-button
            {
@@ -37,4 +37,15 @@ page-login {
         padding-top: 100px;
         text-align: center;
     }
+
+
+     .button-ios-primary {
+    border-color: #31c6c4;
+    color: #31c6c4 ;
+    background-color: transparent;
+    width: 80%;
+    margin: 65px 25px;
+    color: white;
+    background-color: #31c6c4;
+}
 }
