--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -8,13 +8,24 @@ page-signup {
        width: 80%;
        margin: 100px auto;
 
-       .signup-button {
-           width: 95%;
-           margin: 10px auto;
-       }
+       // .signup-button {
+       //     width: 95%;
+       //     margin: 10px auto;
+       // }
     }
     .title {
         padding-top: 100px;
         text-align: center;
     }
+
+  .button-ios-primary {
+    border-color: #31c6c4;
+    color: #31c6c4 ;
+    background-color: transparent;
+    width: 80%;
+    margin: 65px 25px;
+    color: white;
+    background-color: #31c6c4;
 }
+}
+
