--- a/src/pages/all-events/all-events.scss
+++ b/src/pages/all-events/all-events.scss
@@ -2,4 +2,15 @@ page-all-events {
     ion-badge {
         float: right;
     }
+
+    .card-ios {
+    margin: 12px;
+    border-radius: 8px;
+    width: calc(100%);
+    font-size: 1.4rem;
+    margin:20px auto;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 120px rgba(193, 193, 193, 0.9);
+}
 }
