--- a/src/pages/event-detail/event-detail.scss
+++ b/src/pages/event-detail/event-detail.scss
@@ -1,2 +1,12 @@
 page-event-detail {
+	   .card-ios {
+    margin: 12px;
+    border-radius: 8px;
+    width: calc(100%);
+    font-size: 1.4rem;
+    margin:20px auto;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 120px rgba(193, 193, 193, 0.7);
+}
 }
