working on buttons

--- a/src/pages/all-events/all-events.scss
+++ b/src/pages/all-events/all-events.scss
@@ -2,4 +2,9 @@ page-all-events {
     ion-badge {
         float: right;
     }
+
+    button.eventCardButton{
+        float: right;
+        padding-top: 6px
+    }
 }
