--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -49,7 +49,7 @@ $theme-color-3: #5e5874;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #31c6c4,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
