--- a/src/pages/all-events/all-events.scss
+++ b/src/pages/all-events/all-events.scss
@@ -19,4 +19,8 @@ page-all-events {
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0 10px 120px rgba(193, 193, 193, 0.9);
 }
+
+img{
+	height:200px;
+}
 }
