--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -28,4 +28,20 @@ page-user-profile {
     box-shadow: 0 10px 120px rgba(193, 193, 193, 0.7);
 }
 
+ .button-outline-ios-primary {
+    border-color: #31c6c4;
+    color: #31c6c4;
+    background-color: transparent;
+    height: 80%;
+    margin-left: 20px;
+
+}
+
+
+
+.button-ios {
+    border-radius: 4px;
+    height: 2.8em;
+    font-size: 1.2rem;}
+
 }
