--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -44,4 +44,22 @@ page-user-profile {
     height: 2.8em;
     font-size: 1.2rem;}
 
+
+//   .button-ios-primary {
+//     border-color: #31c6c4;
+//     color: #31c6c4 ;
+//     background-color: transparent;
+//     width: 100%;
+//      margin: 15px ;
+//     color: white;
+//     background-color: #31c6c4;
+// }
+
+.item-ios .item-button {
+    // padding: 0 0.5em;
+    height: 40px;
+     width: 100%;
+    font-size: 1.3rem;
+}
+
 }
