--- a/src/pages/restaurant-detail/restaurant-detail.scss
+++ b/src/pages/restaurant-detail/restaurant-detail.scss
@@ -1,3 +1,12 @@
 page-restaurant-detail {
 
+
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
+
 }
