--- a/src/pages/restaurant-selection/restaurant-selection.scss
+++ b/src/pages/restaurant-selection/restaurant-selection.scss
@@ -56,4 +56,13 @@ page-restaurant-selection {
         }
     }
 
+
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
+
 }
