--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -62,4 +62,12 @@ page-user-profile {
     font-size: 1.3rem;
 }
 
+
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
 }
