--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,7 +76,13 @@ $colors: (
 // --------------------------------------------------
 // Windows only Sass variables can go here
 
-
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: blue;
+    pointer-events: auto;
+}
 
 
 // App Theme
