--- a/src/pages/all-events/all-events.scss
+++ b/src/pages/all-events/all-events.scss
@@ -23,4 +23,13 @@ page-all-events {
 img{
 	height:200px;
 }
+
+
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
 }
