--- a/src/pages/create-event/create-event.scss
+++ b/src/pages/create-event/create-event.scss
@@ -76,4 +76,11 @@ page-create-event {
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0 10px 120px rgba(193, 193, 193, 0.7);
 }
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
 }
