--- a/src/pages/invitegroup/invitegroup.scss
+++ b/src/pages/invitegroup/invitegroup.scss
@@ -118,6 +118,13 @@ page-invitegroup {
 		padding-top: 9px
 	}
 
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
 }
 
 
