--- a/src/pages/message/message.scss
+++ b/src/pages/message/message.scss
@@ -79,4 +79,12 @@ page-message {
 		}
 	}
 
+	.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
+
 }
