--- a/src/pages/my-events/my-events.scss
+++ b/src/pages/my-events/my-events.scss
@@ -80,4 +80,12 @@ page-my-events {
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0 10px 120px rgba(193, 193, 193, 0.7);
 }
+
+.toolbar-title-ios {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #31c6c4;
+    pointer-events: auto;
+}
 }
