--- a/src/pages/all-events/all-events.scss
+++ b/src/pages/all-events/all-events.scss
@@ -32,4 +32,15 @@ img{
     color: #31c6c4;
     pointer-events: auto;
 }
+
+
+
+
+
+}
+
+
+page-all-events button.eventCardButton {
+  float:none;
+  padding-top: 6px;
 }
