disable buttons before they can be functional

--- a/src/pages/my-events/my-events.scss
+++ b/src/pages/my-events/my-events.scss
@@ -51,6 +51,10 @@ page-my-events {
         padding-top: 6px
     }
 
+    // div.eventCardClickablePart{
+    //     fill: red;
+    // }
+
 
 
     div.eventDiv{
