--- a/src/pages/my-events/my-events.scss
+++ b/src/pages/my-events/my-events.scss
@@ -55,6 +55,10 @@ page-my-events {
     //     fill: red;
     // }
 
+    ion-icon.isPending{
+        opacity: 0.2;
+    }
+
 
 
     div.eventDiv{
