--- a/src/pages/user-list/user-list.scss
+++ b/src/pages/user-list/user-list.scss
@@ -34,4 +34,15 @@ page-user-list {
     color: #31c6c4;
     pointer-events: auto;
 }
+
+.card-ios {
+    // margin: 8px;
+    border-radius: 8px;
+    width: calc(100%);
+    // font-size: 1.4rem;
+    margin:20px auto;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 120px rgba(193, 193, 193, 0.45);
+}
 }
