--- a/src/pages/user-list/user-list.scss
+++ b/src/pages/user-list/user-list.scss
@@ -27,6 +27,19 @@ page-user-list {
 		min-height: 36px !important;
 	}
 
+
+	.card-ios {
+    margin: 12px;
+    border-radius: 8px;
+    width: calc(100%);
+    font-size: 1.4rem;
+    margin:20px auto;
+    background: #fff;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 120px rgba(193, 193, 193, 0.9);
+}
+
+
 	.toolbar-title-ios {
     text-align: center;
     font-size: 1.7rem;
